[gd_scene load_steps=3 format=3 uid="uid://batjp5qcv65h6"]

[ext_resource type="Script" path="res://message_center_page.gd" id="1_hhfv7"]
[ext_resource type="PackedScene" uid="uid://dwhvbtssvep64" path="res://page.tscn" id="2_tn1xb"]

[node name="MessageCenterPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hhfv7")

[node name="Page" parent="." instance=ExtResource("2_tn1xb")]
layout_mode = 1
page_name = "Message Center"

[node name="Compose" type="Button" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 211.0
offset_right = 289.0
offset_bottom = 242.0
text = "Compose a new message"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 292.0
offset_right = 195.0
offset_bottom = 318.0
text = "Messages list:"

[node name="Greeting" type="Label" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 185.0
offset_right = 211.0
offset_bottom = 211.0
text = "Welcome, Rafly!"

[node name="Logout" type="Button" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 254.0
offset_right = 152.0
offset_bottom = 285.0
text = "Logout"

[node name="MessageList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 316.0
offset_right = 257.0
offset_bottom = 356.0

[connection signal="pressed" from="Compose" to="." method="_on_compose_pressed"]
[connection signal="pressed" from="Logout" to="." method="_on_logout_pressed"]
